# NTUU_KPI_IPSA_My_Samples

./: .gitignore  README.md  malloc_free_test.c  sc_test.c  shortest_longest_word.c
ASD/: bin_tree.c  linked_list.c  linked_list_4-11.c  matrix_spiral.c  tree.txt
AlgProg/: 3_num_from_xxx.c  latin.c  latin_for.c  rm_double_ch.c  s_pyramid.c  select_sort_r.c  strange_definition.txt  sum_of_sum_pr.c  text.txt  word_count.c  zad_1.c  zad_2.c  zad_3.c
OOP/EXAM/: README.md  employee.cpp  employee.h  helper.h  mainEmployee.cpp  mainVirob.cpp  tpvirob.cpp  tpvirob.h  tvirob.cpp  tvirob.h
OOP/LAB_1/: README.md  circle  circle.cpp  circle.h  coordinates.cpp  coordinates.h  helper.h  mainCircle.cpp
OOP/LAB_2/: README.md  circle.cpp  circle.h  color.cpp  coordinates.cpp  coordinates.h  helper.h  mainPolygon.cpp  polygon.cpp  polygon.h
OOP/LAB_3/: README.md  circle.cpp  circle.h  color.h  coordinates.cpp  coordinates.h  mainPolygon.cpp  polygon.cpp  polygon.h
OOP/LAB_4/: CMakeLists.txt  README.md  circle.h  color.cpp  coordinates.h  helper.h  image.cpp  mainImage.cpp  polygon.cpp  polygon.h
OOP/LAB_5/: README.md  circle.cpp  color.cpp  color.h  coordinates.cpp  (+3 more)
PrAlg/: big_data.c
ProektAlg/: OSR.txt  big_data_time_check.c  result.txt  search_words.c  search_words_1.c  sort_methods.c  text.txt  txt.txt
WEB/: ggg.html  index_l1.html
s1/: array_rm_min.c  text.txt
test0/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  DEFINES.txt  arr0_test.c  c_str_arr_sample.c  cpu_count_sample.c  cstr_test.c  hello.c  matrix_spiral1.c  matrix_spiral_rev.c  void_snow.c  void_snow_ch.c
(+66 files in other folders)
